--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div class="section">
       <h2>Proyectos Personales</h2>
       <ul>
-        <li><strong>Currículum Web</strong> – Esta misma página</li>
-        <li><strong>Mini tienda online</strong> – Proyecto en desarrollo</li>
-        <li><strong>Blog técnico</strong> – Publicaciones sobre lo que voy aprendiendo</li>
+        <li>Currículum Web</li>
+        <li>Mini tienda online</li>
+        <li>Blog técnico</li>
       </ul>
     </div>
 
