--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currículum Tecnico informatico</title>
+  <title>Currículum Tecnico Informatico</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 
@@ -22,30 +22,16 @@
       <h1>Domingo Bober</h1>
       <p>Martorell</p>
       <p>📞 695 056 239 | 📧 dbober3@gmail.com</p>
-      <p><a href="https://github.com/tuusuario" style="color: #1abc9c;">GitHub</a></p>
+      <p><a href="https://github.com/dbober972" style="color: #1abc9c;">GitHub</a></p>
     </div>
   </header>
 
   <div class="container">
     <div class="section">
       <h2>Perfil Profesional</h2>
-      <p>Profesional con 1 año de experiencia en el ámbito del mantenimiento urbano y servicios generales, desempeñando
-        funciones
-        clave como miembro de la brigada municipal en El Bruc, a través del Consell Comarcal. Especializado en el
-        cuidado,
-        reparación y mejora de infraestructuras públicas, con un enfoque práctico, responsable y comprometido con el
-        bienestar
-        de la comunidad.
-      <p> Destaco por mi capacidad para ejecutar tareas de mantenimiento de calles, mobiliario urbano, zonas verdes y
-        limpieza
-        viaria, aplicando conocimientos técnicos y operativos con eficacia y seguridad. Acostumbrado al trabajo en
-        equipo, a la
-        resolución de incidencias en el entorno urbano y a la adaptación constante a las necesidades del municipio.</p>
-      Mi trayectoria refleja una actitud proactiva, autonomía en el desempeño diario y una firme orientación al
-      servicio
-      público. Siempre dispuesto a aprender, colaborar y aportar soluciones que mejoren la calidad de vida de los
-      vecinos y el
-      estado del entorno.
+      <p>Profesional con 5 año de experiencia tecnico informatico
+      <p> </p>
+
       </p>
     </div>
 
@@ -60,7 +46,7 @@
     <div class="section">
       <h2>Proyectos Personales</h2>
       <ul>
-        <li>Currículum Web</li>
+        <li>https://github.com/dbober972/curriculum-tecnico-informatico</li>
         <li>Mini tienda online</li>
         <li>Blog técnico</li>
       </ul>
