--- a/index.html
+++ b/index.html
@@ -29,12 +29,42 @@
   <div class="container">
     <div class="section">
       <h2>Perfil Profesional</h2>
-      <p>Profesional con 5 año de experiencia tecnico informatico
-      <p> </p>
+      <p>Técnico en mantenimiento informático con más de 4 años de experiencia en la resolución de incidencias de
+        software,
+        configuración de sistemas operativos y redes locales. Especializado en entornos Windows (NT, 2000, XP, Server) y
+        Linux,
+        con sólida capacidad para instalar, configurar y mantener equipos informáticos, impresoras y componentes
+        internos.</p>
+      <p> Experto en protocolos de red como TCP/IP, FTP y DNS, así como en la instalación y reparación de conexiones a
+        Internet.
+        Destaco por mi autonomía, capacidad analítica y compromiso con la optimización del rendimiento tecnológico en
+        entornos
+        industriales.</p>
 
-      </p>
+
+
     </div>
 
+    <div class="section">
+      <h2>Experiencia</h2>
+
+      <p>🏢 FERROBERICA — Técnico de Mantenimiento Informático</p>
+      <p>📍 Abrera | ⏱️ Septiembre 2005 – Marzo 2010</p>
+      <p>Responsable del mantenimiento y soporte técnico de sistemas informáticos en entorno industrial.</p>
+      <p>Funciones destacadas:</p>
+      <ul>
+        <li>Diagnóstico y resolución de incidencias de software en equipos de usuario.</li>
+        <li>Configuración y gestión de cuentas de correo electrónico.</li>
+        <li>Instalación y configuración de sistemas operativos: Windows NT, 2000, 2000 Server, XP y Linux.</li>
+        <li>Montaje, instalación y mantenimiento de ordenadores y componentes internos.</li>
+        <li>Instalación y configuración de impresoras locales y en red.</li>
+        <li>Diseño e implementación de redes LAN, incluyendo cableado, configuración de routers y switches.</li>
+        <li>Configuración de protocolos de red: TCP/IP, FTP, DNS.</li>
+        <li>Resolución de problemas de conectividad y reparación de acceso a Internet.</li>
+      </ul>
+
+
+    </div>
     <div class="section">
       <h2>Formación</h2>
       <ul>
