--- a/index.html
+++ b/index.html
@@ -72,69 +72,72 @@
     <div class="section">
       <h2>Formación</h2>
       <ul>
-        <li><strong>Ciclo Profesional – Programación Web</strong> (SEPE, 2025)</li>
-        <li>HTML5, CSS3, JavaScript, diseño responsive, Bootstrap</li>
+        <li>Tenico en sistemas Microinformática – (SOC, 2025)</li>
+        <li>Tecnologia digital y uso de ordenador y de sistemas operativos (SOC,2019)</li>
       </ul>
     </div>
 
-    <h2>Certificados</h2>
-    <ul>
-      <li>Curso de HTML5 y CSS3- Udemy (09/2019)</li>
-      <li>Visual Basic para oficinas - Udemy (10/2019)</li>
-      <li>Diseña logos a partir de retículas- Barcelona Activa (2025)</li>
-      <li>Curso básico de iniciación SAP - Udemy (05/2019)</li>
-      <li>GIMP: retoque digital de imágenes - Barcelona Activa (2025)</li>
-      <li>Introducción a Git y GitHub - Udemy (09/2019)</li>
-      <li>Masterclass: cómo hacer un logo en 5 minutos - Barcelona Activa (2025)</li>
-      <li>Cómo escribir y crear contenido para la web - Barcelona Activa (2025) </li>
-    </ul>
-  </div>
 
-  <div class="section">
-    <h2>Proyectos Personales</h2>
-    <ul>
-      <li>https://github.com/dbober972/curriculum-tecnico-informatico</li>
-      <li>Mini tienda online</li>
-      <li>Blog técnico</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Certificados</h2>
+      <ul>
+        <li>Curso de HTML5 y CSS3- Udemy (09/2019)</li>
+        <li>Visual Basic para oficinas - Udemy (10/2019)</li>
+        <li>Diseña logos a partir de retículas- Barcelona Activa (2025)</li>
+        <li>Curso básico de iniciación SAP - Udemy (05/2019)</li>
+        <li>GIMP: retoque digital de imágenes - Barcelona Activa (2025)</li>
+        <li>Introducción a Git y GitHub - Udemy (09/2019)</li>
+        <li>Masterclass: cómo hacer un logo en 5 minutos - Barcelona Activa (2025)</li>
+        <li>Cómo escribir y crear contenido para la web - Barcelona Activa (2025) </li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2>Habilidades Técnicas</h2>
-    <ul>
-      <li>Diagnóstico y resolución de problemas de software en entornos de oficina e industriales</li>
-      <li>Configuración de cuentas de correo electrónico y clientes de mensajería (Outlook, Thunderbird, etc.)</li>
-      <li>Instalación, mantenimiento y administración de sistemas operativos: Windows NT/2000/XP/Server 2000 y
-        distribuciones
-        Linux</li>
-      <li>Montaje, reparación y actualización de hardware: ordenadores, periféricos y componentes internos</li>
-      <li>Instalación y configuración de impresoras locales y en red</li>
-      <li>Diseño e implementación de redes LAN: cableado estructurado, instalación de routers y switches</li>
-      <li>Configuración de protocolos de red: TCP/IP, FTP, DNS</li>
-      <li>Resolución de incidencias de conectividad y problemas de acceso a Internet</li>
-      <li>Soporte técnico presencial a usuarios en entorno industrial, con enfoque en atención eficiente y resolución
-        rápida</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Proyectos Personales</h2>
+      <ul>
+        <li>https://github.com/dbober972/curriculum-tecnico-informatico</li>
+        <li>Mini tienda online</li>
+        <li>Blog técnico</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2>Habilidades Personales</h2>
-    <ul>
-      <li>Resolución de problemas: capacidad para identificar fallos técnicos y aplicar soluciones efectivas bajo
-        presión</li>
-      <li>Atención al cliente: trato profesional y empático con usuarios, ofreciendo soporte técnico claro y eficiente
-      </li>
-      <li>Trabajo en equipo: colaboración con otros departamentos y técnicos para mantener la operatividad de sistemas
-      </li>
-      <li>Adaptabilidad: experiencia en entornos industriales cambiantes, con capacidad para aprender nuevas
-        tecnologías</li>
-      <li>Comunicación efectiva: habilidad para explicar conceptos técnicos a usuarios no especializados</li>
-      <li>Organización y gestión del tiempo: planificación de tareas de mantenimiento y resolución de incidencias sin
-        afectar la productividad</li>
-      <li>Proactividad: iniciativa para mejorar sistemas, prevenir fallos y optimizar recursos tecnológicos</li>
-      <li>Responsabilidad: compromiso con la calidad del servicio técnico y la seguridad informática</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Habilidades Técnicas</h2>
+      <ul>
+        <li>Diagnóstico y resolución de problemas de software en entornos de oficina e industriales</li>
+        <l>Configuración de cuentas de correo electrónico y clientes de mensajería (Outlook, Thunderbird, etc.)</li>
+          <li>Instalación, mantenimiento y administración de sistemas operativos: Windows NT/2000/XP/Server 2000 y
+            distribuciones
+            Linux</li>
+          <li>Montaje, reparación y actualización de hardware: ordenadores, periféricos y componentes internos</li>
+          <li>Instalación y configuración de impresoras locales y en red</li>
+          <li>Diseño e implementación de redes LAN: cableado estructurado, instalación de routers y switches</li>
+          <li>Configuración de protocolos de red: TCP/IP, FTP, DNS</li>
+          <li>Resolución de incidencias de conectividad y problemas de acceso a Internet</li>
+          <li>Soporte técnico presencial a usuarios en entorno industrial, con enfoque en atención eficiente y
+            resolución
+            rápida</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Habilidades Personales</h2>
+      <ul>
+        <li>Resolución de problemas: capacidad para identificar fallos técnicos y aplicar soluciones efectivas bajo
+          presión</li>
+        <li>Atención al cliente: trato profesional y empático con usuarios, ofreciendo soporte técnico claro y eficiente
+        </li>
+        <li>Trabajo en equipo: colaboración con otros departamentos y técnicos para mantener la operatividad de sistemas
+        </li>
+        <li>Adaptabilidad: experiencia en entornos industriales cambiantes, con capacidad para aprender nuevas
+          tecnologías</li>
+        <li>Comunicación efectiva: habilidad para explicar conceptos técnicos a usuarios no especializados</li>
+        <li>Organización y gestión del tiempo: planificación de tareas de mantenimiento y resolución de incidencias sin
+          afectar la productividad</li>
+        <li>Proactividad: iniciativa para mejorar sistemas, prevenir fallos y optimizar recursos tecnológicos</li>
+        <li>Responsabilidad: compromiso con la calidad del servicio técnico y la seguridad informática</li>
+      </ul>
+    </div>
   </div>
 </body>
 
